--- a/src/Components/PTextInput/PTextInput.scss
+++ b/src/Components/PTextInput/PTextInput.scss
@@ -31,14 +31,24 @@
     font-size: 1.1rem;
     font-weight: 500;
   }
+
+  .InputBoxMultiline {
+    @extend .InputBox;
+    overflow: auto;
+    padding: 10px;
+    height: 110px;
+    resize: none;
+  }
 }
 
 .PTextInput-Theme_01 {
   @extend .PTextInput;
+
   .Title {
     @extend .Title;
     color: white;
   }
+
   .InputBox {
     @extend .InputBox;
     color: white;
@@ -50,13 +60,24 @@
 
 .PTextInput-Theme_02 {
   @extend .PTextInput;
+
   .Title {
     @extend .Title;
     color: #2c2d36;
   }
+
   .InputBox {
     @extend .InputBox;
-    color: #2c2d36;
+
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.1),
+      rgba(0, 0, 0, 0.1) 1px,
+      rgba(0, 0, 0, 0.1) 2px,
+      rgba(0, 0, 0, 0.1) 3px
+    );
+
+    color: black;
     &::placeholder {
       color: #3d3d42;
     }
@@ -65,10 +86,12 @@
 
 .PTextInput-Theme_03 {
   @extend .PTextInput;
+
   .Title {
     @extend .Title;
     color: white;
   }
+
   .InputBox {
     @extend .InputBox;
     color: white;
