--- a/src/Components/PTextInput/PTextInput.scss
+++ b/src/Components/PTextInput/PTextInput.scss
@@ -79,7 +79,7 @@
 
     color: black;
     &::placeholder {
-      color: #3d3d42;
+      color: #87878e;
     }
   }
 }
@@ -96,7 +96,7 @@
     @extend .InputBox;
     color: white;
     &::placeholder {
-      color: #a3a3ac;
+      color: #87878e;
     }
   }
 }
