--- a/src/Components/Menu/Menu.scss
+++ b/src/Components/Menu/Menu.scss
@@ -10,11 +10,12 @@ $duration: 0.5s;
   flex-direction: column;
   justify-content: space-between;
   height: calc(92vh - 25px);
-  margin: 10px !important;
   border-radius: 10px;
   transition: all 1s;
   position: sticky;
   top: calc(8vh + 15px);
+  margin: 10px !important;
+  margin-right: 0 !important;
 
 
   .MenuButtons {
