--- a/src/Screens/Events/EventCreation.scss
+++ b/src/Screens/Events/EventCreation.scss
@@ -1,10 +1,10 @@
 @import "../../Utils/StyleClasses.scss";
 @import "../../Utils/ColorVariables.scss";
 
-.MuiContainer-root {
-  padding-left: 0 !important;
-  padding-right: 0 !important;
-}
+// .MuiContainer-root {
+//   padding-left: 0 !important;
+//   padding-right: 0 !important;
+// }
 
 .EventCreationScreen {
   .EventInfoContainer,
