--- a/src/App.scss
+++ b/src/App.scss
@@ -1,98 +1,87 @@
 @import "./Utils/ColorVariables.scss";
 
+body {
+  min-width: 1366px !important;
+  min-height: 768px !important;
+}
+
 .App {
   text-align: center;
   min-height: 100vh;
   flex-direction: column;
   display: flex;
   color: white;
+
+  .Body {
+    flex-direction: row;
+    position: relative;
+    min-height: calc(92vh - 5px);
+    display: flex;
+    padding-top: calc(8vh + 5px);
+
+    background-attachment: fixed;
+    background-size: cover;
+
+    ::-webkit-scrollbar {
+      width: 12px; // width of the entire scrollbar
+    }
+  }
+
+  .Content {
+    min-width: 50vw;
+    padding: 10px 20px;
+  }
 }
 
 .App-Theme_01 {
   @extend .App;
-  background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.25) 200%);
+  background: linear-gradient(to bottom, #323232 0%, #3f3f3f 40%, #1c1c1c 150%),
+    linear-gradient(to top, rgba(255, 255, 255, 0.4) 0%, rgba(0, 0, 0, 0.25) 200%);
   background-blend-mode: multiply;
+
+  .Body {
+    ::-webkit-scrollbar-track {
+      background: rgb(57, 64, 66); // color of the tracking area
+    }
+    ::-webkit-scrollbar-thumb {
+      background-color: rgb(118, 128, 141); // color of the scroll thumb
+      border: 3px solid rgb(57, 64, 66); // creates padding around scroll thumb
+      border-radius: 20px; // roundness of the scroll thumb
+    }
+  }
 }
 
 .App-Theme_02 {
   @extend .App;
-  background-image: linear-gradient(-25deg, #E3FDF5 0%, #e8e3f1 100%);
+  background-image: linear-gradient(-25deg, #e3fdf5 0%, #e8e3f1 100%);
+
+  .Body {
+    ::-webkit-scrollbar-track {
+      background: rgb(190, 195, 197); // color of the tracking area
+    }
+    ::-webkit-scrollbar-thumb {
+      background-color: rgb(95, 108, 126); // color of the scroll thumb
+      border: 3px solid rgb(190, 195, 197); // creates padding around scroll thumb
+      border-radius: 20px; // roundness of the scroll thumb
+    }
+  }
 }
 
 .App-Theme_03 {
   @extend .App;
   background: linear-gradient(to bottom right, #8400ff, #396afc, #8400ff);
-}
 
-.Body {
-  flex-direction: row;
-  position: relative;
-  min-height: calc(92vh - 5px);
-  display: flex;
-  padding-top: calc(8vh + 5px);
-
-  // background-image: url('/Assets/images/bg2.jpg');
-  background-attachment: fixed;
-  background-size: cover;
-
-  ::-webkit-scrollbar {
-    width: 12px; // width of the entire scrollbar
+  .Body {
+    ::-webkit-scrollbar-track {
+      background: rgb(230, 185, 236); // color of the tracking area
+    }
+    ::-webkit-scrollbar-thumb {
+      background: linear-gradient(
+        rgb(107, 84, 212),
+        rgb(167, 36, 149)
+      ); // color of the scroll thumb
+      border: 3px solid rgb(230, 185, 236); // creates padding around scroll thumb
+      border-radius: 20px; // roundness of the scroll thumb
+    }
   }
-}
-
-.Body-Theme_01 {
-  @extend .Body;
-
-  ::-webkit-scrollbar-track {
-    background: rgb(57, 64, 66); // color of the tracking area
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background-color: rgb(118, 128, 141);  // color of the scroll thumb
-    border: 3px solid rgb(57, 64, 66); // creates padding around scroll thumb
-    border-radius: 20px;                    // roundness of the scroll thumb
-  }
-}
-
-.Body-Theme_02 {
-  @extend .Body;
-
-  ::-webkit-scrollbar-track {
-    background: rgb(190, 195, 197); // color of the tracking area
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background-color: rgb(95, 108, 126);  // color of the scroll thumb
-    border: 3px solid rgb(190, 195, 197); // creates padding around scroll thumb
-    border-radius: 20px;                    // roundness of the scroll thumb
-  }
-}
-
-.Body-Theme_03 {
-  @extend .Body;
-
-  ::-webkit-scrollbar-track {
-    background: rgb(230, 185, 236); // color of the tracking area
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background: linear-gradient(rgb(107, 84, 212), rgb(167, 36, 149));  // color of the scroll thumb
-    border: 3px solid rgb(230, 185, 236); // creates padding around scroll thumb
-    border-radius: 20px;                    // roundness of the scroll thumb
-  }
-}
-
-
-.Content {
-  min-width: 50vw;
-  padding: 10px 20px;
-}
-
-.Link {
-  color: #61dafb;
-}
-
-body {
-  min-width: 1366px !important;
-  min-height: 768px !important;
 }
