--- a/src/Components/PDateTimePicker/PDateTimePicker.scss
+++ b/src/Components/PDateTimePicker/PDateTimePicker.scss
@@ -40,11 +40,9 @@
 .PDateTimePicker-Theme_01 {
   @extend .PDateTimePicker;
   .Title {
-    @extend .Title;
     color: white;
   }
   .InputBox {
-    @extend .InputBox;
     color: white;
     &::placeholder {
       color: #a3a3ac;
@@ -55,11 +53,17 @@
 .PDateTimePicker-Theme_02 {
   @extend .PDateTimePicker;
   .Title {
-    @extend .Title;
     color: #2c2d36;
   }
   .InputBox {
-    @extend .InputBox;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.1),
+      rgba(0, 0, 0, 0.1) 1px,
+      rgba(0, 0, 0, 0.1) 2px,
+      rgba(0, 0, 0, 0.1) 3px
+    );
+
     color: #2c2d36;
     &::placeholder {
       color: #3d3d42;
@@ -70,11 +74,9 @@
 .PDateTimePicker-Theme_03 {
   @extend .PDateTimePicker;
   .Title {
-    @extend .Title;
     color: white;
   }
   .InputBox {
-    @extend .InputBox;
     color: white;
     &::placeholder {
       color: #a3a3ac;
