--- a/src/Components/PTimeInput/PTimeInput.scss
+++ b/src/Components/PTimeInput/PTimeInput.scss
@@ -36,11 +36,9 @@
 .PTimeInput-Theme_01 {
   @extend .PTimeInput;
   .Title {
-    @extend .Title;
     color: white;
   }
   .InputBox {
-    @extend .InputBox;
     color: white;
     &::placeholder {
       color: #a3a3ac;
@@ -51,11 +49,17 @@
 .PTimeInput-Theme_02 {
   @extend .PTimeInput;
   .Title {
-    @extend .Title;
     color: #2c2d36;
   }
   .InputBox {
-    @extend .InputBox;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.1),
+      rgba(0, 0, 0, 0.1) 1px,
+      rgba(0, 0, 0, 0.1) 2px,
+      rgba(0, 0, 0, 0.1) 3px
+    );
+
     color: #2c2d36;
     &::placeholder {
       color: #3d3d42;
@@ -66,11 +70,9 @@
 .PTimeInput-Theme_03 {
   @extend .PTimeInput;
   .Title {
-    @extend .Title;
     color: white;
   }
   .InputBox {
-    @extend .InputBox;
     color: white;
     &::placeholder {
       color: #a3a3ac;
