--- a/src/Screens/Home/Home.scss
+++ b/src/Screens/Home/Home.scss
@@ -18,7 +18,7 @@
   }
 
   .Subtitles {
-    font-size: 2vw;
+    font-size: 2rem;
     font-weight: 500;
     margin-bottom: 10px;
     display: flex;
@@ -33,17 +33,17 @@
 
   .PastEvent {
     margin-left: 10px;
-    font-size: 2vw;
+    font-size: 2rem;
   }
 
   .UpcomingEvent {
     margin-left: 10px;
-    font-size: 2vw;
+    font-size: 2rem;
   }
 
   .NewEvent {
     margin-left: 10px;
-    font-size: 2vw;
+    font-size: 2rem;
   }
 
   .CreateContainer {
@@ -59,19 +59,17 @@
   .EventList {
     .NoEventsContainer {
       display: flex;
-      margin-top: 20px;
-      margin-bottom: 20px;
+      margin: 20px 0;
       align-items: center;
+      gap: 10px;
+
       .NoEventText {
         @extend .Text;
         font-size: 2rem;
         font-weight: 500;
       }
       .NoEventIcon {
-        width: 50px;
-        height: 50px;
-        margin-left: 30px;
-        margin-right: 20px;
+        font-size: 2rem;
       }
     }
   }
@@ -106,8 +104,11 @@
   @extend .Home;
   @extend .ComponentSurface-Theme_01;
 
-  .MainTitle, .Subtitles, .NoEventText, .NoEventIcon {
+  .MainTitle, .Subtitles {
     color: white;
+  }
+  .NoEventText, .NoEventIcon {
+    color: #979aa5;
   }
   .CreateButton {
     @extend .GenericButton-Theme_01;
@@ -122,9 +123,12 @@
   @extend .Home;
   @extend .ComponentSurface-Theme_02;
 
-  .MainTitle, .Subtitles, .NoEventText, .NoEventIcon {
+  .MainTitle, .Subtitles {
     color: #323236;
     text-shadow: none;
+  }
+  .NoEventText, .NoEventIcon {
+    color: #979aa5;
   }
   .CreateButton {
     @extend .GenericButton-Theme_02;
@@ -139,8 +143,11 @@
   @extend .Home;
   @extend .ComponentSurface-Theme_03;
 
-  .MainTitle, .Subtitles, .NoEventText, .NoEventIcon {
+  .MainTitle, .Subtitles {
     color: white;
+  }
+  .NoEventText, .NoEventIcon {
+    color: #979aa5;
   }
   .CreateButton {
     @extend .GenericButton-Theme_03;
