--- a/src/Screens/Learning/LearningArticleWrite/LearningArticleWrite.scss
+++ b/src/Screens/Learning/LearningArticleWrite/LearningArticleWrite.scss
@@ -2,6 +2,12 @@
 @import "../../../Utils/ColorVariables.scss";
 
 .LearningArticleWriteScreen {
+  .ArticleInfoContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
   .ArticleInfoContainer,
   .ActionButtons {
     border-radius: 10px;
@@ -22,7 +28,6 @@
     font-weight: 600;
     font-size: 1.3rem;
     text-align: left;
-    margin-top: 15px;
   }
 
   .EditPreviewContainer {
@@ -133,9 +138,7 @@
     @extend .ComponentSurface-Theme_01;
   }
 
-  .ArticlePreviewTitle-Theme_01 {
-    @extend .ArticlePreviewTitle;
-    @extend .Titles;
+  .ArticlePreviewTitle {
     color: white;
   }
 
@@ -183,9 +186,7 @@
     background-image: linear-gradient(-45deg, #f5f7fa, #c3cfe2);
   }
 
-  .ArticlePreviewTitle-Theme_02 {
-    @extend .ArticlePreviewTitle;
-    @extend .Titles;
+  .ArticlePreviewTitle {
     color: #2c2d36;
   }
 
@@ -232,9 +233,7 @@
     @extend .ComponentSurface-Theme_03;
   }
 
-  .ArticlePreviewTitle-Theme_03 {
-    @extend .ArticlePreviewTitle;
-    @extend .Titles;
+  .ArticlePreviewTitle {
     color: white;
   }
 
